[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbta"
version = "0.1.0"
authors = [
    { name = "Justin Bell", email = "belljustin87@gmail.com" },
]
description = "An application for displaying upcoming Massachusetts Bay Transportation Authority (MBTA) arrival times on an eink display"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pymbta3>=0.0.5.dev0"
]

[project.scripts]
mbta = "mbta.main:main"
